# agentic-ai-spike

./: .env.example  .gitignore  biome.json  compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/: settings.json
.claude/commands/: create_plan.md  create_prd.md  db_migration_compaction.md  pr.md  test.md
.claude/skills/forms/: SKILL.md
apps/ai-service/: Dockerfile  package.json  pyproject.toml
apps/ai-service/src/ai_service/: config.py  main.py
apps/ai-service/src/ai_service/agents/: spike_agent.py
apps/api/: Dockerfile  drizzle.config.ts  package.json
apps/api/drizzle/: 0000_lonely_shiver_man.sql
apps/api/drizzle/meta/: 0000_snapshot.json  _journal.json
apps/api/src/: main.ts  server.ts
apps/api/src/__tests__/: agent-service.test.ts  conversation.test.ts  employee.test.ts  pto.test.ts  schema.test.ts  setup.ts
apps/api/src/db/: index.ts  migrate.ts  relations.ts  schema.ts  seed.ts
apps/api/src/graphql/: context.ts  pubsub.ts
apps/api/src/graphql/schema/: conversation.ts  employee.ts  index.ts  pto-accrual.ts  pto.ts  subscription.ts
apps/api/src/schema/: agent.ts  ai.ts  builder.ts  index.ts
apps/api/src/services/: agent-service.ts  ai-service.ts
apps/web/: Dockerfile  package.json  vite.config.ts
apps/web/src/lib/: apollo.ts
apps/web/src/routes/: __root.tsx  index.tsx
scripts/: dev-docker-rebuild.sh  dev-docker-stop.sh  dev-docker.sh  docker-check.sh
thoughts/plans/: 0001-initial-infrastructure-2026-02-27.md
